2002-11-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* autogen.sh:
	* configure.in: added configuration summary.

2002-11-03  Alp Toker <alp@atoker.com>

	* sources/gtk-sharp.sources: Update to support GStreamer 0.4.2
	* api/gst-api.xml : ditto
	* gst/Application.cs : ditto

2002-11-01  Alp Toker <alp@atoker.com>

	* configure.in : Add GStreamer support
	* api/Makefile.in : ditto
	* api/gst-api.xml : ditto
	* sources/gtk-sharp.sources: ditto
	* gst/Makefile.in : ditto
	* gst/Application.cs : Gst initialization
	* sample/GstPlayer.cs : An example which uses the Gst binding
	* generator/Parameters.cs : Add 'fixed' keyword to name mangler
	* generator/StructBase.cs : ditto
	* generator/Parameters.cs : Fix Initialize() for set accessors
	* generator/Ctor.cs : ditto
	* generator/Method.cs : ditto
	* generator/SymbolTable.cs : Add gint64, guint64 to simple types

2002-10-29  Mike Kestner <mkestner@speakeasy.net>

	* generator/Signal.cs : Fix namespacing of Args.

2002-10-27  Mike Kestner <mkestner@speakeasy.net>

	* configure.in : bump version to 0.6.

2002-10-26  Mike Kestner <mkestner@speakeasy.net>

	* gconf/GConf.PropertyEditors/PropertyEditorColorPicker.cs : ns stuff
	* glade/XML.custom : more GnomeSharp namespace stuff
	* gnome/CanvasProxy.cs : ditto
	* sample/CanvasExample.cs : ditto
	* sample/Fifteen.cs : ditto
	* sample/GnomeHelloWorld.cs : ditto

2002-10-26  Mike Kestner <mkestner@speakeasy.net>

	Much of this patch from Vlad, with substantial rework by mk.
	* */makefile.win32 : introduce mapdllnames.pl, api, and glue
	* generator/CallbackGen.cs : rework namespacing for csc compilation
	* generator/Parameters.cs : ditto
	* generator/Signal.cs : ditto
	* generator/SignalHandler.cs : ditto
	* glue/win32dll.c : new dll construction source
	* glib/Value.cs : new ushort ctor/cast operator
	* gtk/Table.custom : comment this out until we add a default ctor tag
	* gtk/ThreadNotify.cs : make ReadyEvent public
	* sources/Gdk.metadata : mark a Parse() param as ref
	