@@ -1,3 +1,7 @@
+2002-11-06  Duncan Mak  <duncan@ximian.com>
+
+	* sample/Scribble.cs: Make it compile.
+
 2002-11-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* autogen.sh:
